# ManifoldEM

./: .gitignore  CHANGELOG.md  ManifoldEM_GUI.py  README.md  pyproject.toml  setup.py
.github/workflows/: testing.yaml
ManifoldEM/: ComputeEnergy1D.py  DMembeddingII.py  Data.py  EL1D.py  EL1D_mpi.py  FindCCGraph.py  FindCCGraphPruned.py  FindConformationalCoord.py  GetDistancesS2.py  GetDistancesS2_mpi.py  L2_distance.py  NLSA.py  NLSAmovie.py  NLSAmovie_mpi.py  PrepareOutputS2.py  R_p.py  S2tessellation.py  __init__.py  a.py  annularMask.py  backup.py  belief_propagation.py  calc_distance.py  clusterAvg.py  core.py  ctemh_cryoFrank.py  data_store.py  distribute3Sphere.py  embedd.py  energy_landscape.py  fergusonE.py  find_conformational_coords.py  fit_1D_open_manifold_3D.py  getDistanceCTF_local_Conj9combinedS2.py  get_fit_1D_open_manifold_3D_param.py  get_wiener.py  linalg.py  makeMovie.py  manifoldAnalysis.py  manifoldAnalysis_mpi.py  (+31 more)
ManifoldEM/CC/: ComputeMeasureEdgeAll.py  ComputeMeasureEdgeAll_mpi.py  ComputeOpticalFlowPrDAll.py  ComputeOpticalFlowPrDAll_mpi.py  ComputePsiMovieEdgeMeasurements.py  LoadPrDPsiMoviesMasked.py  MRFBeliefPropagation.py  MRFGeneratePotentials.py  OpticalFlowMovie.py  hogHistogram.py  hornschunck_simple.py  projectMask.py  runGlobalOptimization.py  transformations.py
ManifoldEM/gui/: compilation_tab.py  distribution_tab.py  eigenvectors_tab.py  embedding_tab.py  energetics_tab.py  import_tab.py  main_window.py  occupancy_tab.py  s2_view.py  threshold_view.py  utils.py
ManifoldEM/gui/eigen_views/: __init__.py  avg_view.py  bandwidth_view.py  cc_details_view.py  eig_val_canvas.py  eigspec_view.py  mayavi_rho.py  pd_selection_view.py  vid_to_canvas.py
ManifoldEM/interfaces/: cli.py  gui.py  interactive.py  simple.py
data_viewers/: DM_viewer.py  PyQt4_VideoPlayer.py  collageViewer.py  getDistances_viewer.py  mayavi_viewer.py  psiAnalysis_progress.py  psiAnalysis_viewer.py  selecGCs_viewer.py
modules/: ComputeEnergy1D.py  FindConformationalCoord.py  backup.py  clusterAvg.py
modules/CC/: ComputeMeasureEdgeAll.py  ComputeMeasureEdgeAll_mpi.py  ComputeOpticalFlowPrDAll.py  ComputeOpticalFlowPrDAll_mpi.py  ComputePsiMovieEdgeMeasurements.py  LoadPrDPsiMoviesMasked.py  MRFGeneratePotentials.py  OpticalFlowMovie.py  hogHistogram.py  projectMask.py  runGlobalOptimization.py
notes/: TODO.md  data.md
scripts/: 1_CreateSession.py  2_GenMovie.py  3_GenGif.py  ManifoldEM_GUI  manifold-cli  manifold-gui  mrc2denoise.py  mrc2svd.py  mrcs2mrc.sh
tests/: test_core.py  test_quaternion.py  test_tesselation.py
tutorial/: README.md
